--- a/custom_msgs/package.xml
+++ b/custom_msgs/package.xml
@@ -9,6 +9,8 @@
   <maintainer email="Nico-Paul-Rene.Zumpe@student.tu-freiberg.de">Nico Zumpe</maintainer>
   <license>WTFPL</license>
 
+  <depend>std_msgs</depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
