--- a/wayfinding/CMakeLists.txt
+++ b/wayfinding/CMakeLists.txt
@@ -17,7 +17,6 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(filters REQUIRED)
-find_package(bump_detection REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(custom_msgs REQUIRED)
 find_package(zed_interfaces REQUIRED)
@@ -34,10 +33,10 @@ set(SOURCES "")
 list(APPEND SOURCES "src/main.cpp")
 list(APPEND SOURCES "src/node.cpp")
 
-add_library(${PROJECT_NAME}_lib "src/wayfinding.cpp" "include/${PROJECT_NAME}/wayfinding.hpp")
+add_library(${PROJECT_NAME}_lib "src/wayfinding_top_down.cpp" "src/wayfinding_line_detection.cpp" "include/${PROJECT_NAME}/wayfinding.hpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${PROJECT_NAME}_lib filters::filters_lib bump_detection::bump_detection_lib)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${PROJECT_NAME}_lib filters::filters_lib)
 add_definitions(-O3)
 ament_target_dependencies(${PROJECT_NAME} rclcpp custom_msgs sensor_msgs zed_interfaces)
 
