--- a/wayfinding/param/param.yaml
+++ b/wayfinding/param/param.yaml
@@ -1,15 +1,14 @@
 wayfinding:
   ros__parameters:
-    _: null #placeholder/dummy
+    _: null #dummy
     # topics:
       # flux:
         # camera_info:  "/zed2i_c1/zed_node_c1/rgb/camera_info"
         # imu:          "/imu/data"
-        # depth_info:   "/zed2i_c1/zed_node_c1/depth/depth_info"
         # pointcloud:   "/zed2i_c1/zed_node_c1/point_cloud/cloud_registered"
         # rgb_image:    "/zed2i_c1/zed_node_c1/rgb/image_rect_color"
-        # depth_image:  "/zed2i_c1/zed_node_c1/depth/depth_registered"
       # dmc:
       # pub: "/path_width"
     # params:
-      # filter_distance: 15.0
+      # angle_filter: 22.5
+      # rel_tube_width: 60.0
