--- a/lidar_curb_detection/CMakeLists.txt
+++ b/lidar_curb_detection/CMakeLists.txt
@@ -18,11 +18,14 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(custom_msgs REQUIRED)
+find_package(filters REQUIRED)
 find_package(OpenCV REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
+include_directories(/home/georg/ros2_github/install/filters/include)
+
 
 link_directories(${OpenCV_LIBRARY_DIRS})
 
@@ -34,7 +37,7 @@ list(APPEND SOURCES "src/lidar_curb_detection.cpp")
 add_library(${PROJECT_NAME}_lib "src/${PROJECT_NAME}.cpp" "include/${PROJECT_NAME}/${PROJECT_NAME}.hpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES}) # `pkg-config --libs opencv4`
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${PROJECT_NAME}_lib)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${PROJECT_NAME}_lib filters::filters_lib)
 # target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}_lib)
 add_definitions(-O3)
 ament_target_dependencies(${PROJECT_NAME} rclcpp sensor_msgs custom_msgs)
