--- a/lidar_curb_detection/package.xml
+++ b/lidar_curb_detection/package.xml
@@ -14,6 +14,7 @@
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>custom_msgs</depend>
+  <depend>filters</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
