--- a/visualize_path/CMakeLists.txt
+++ b/visualize_path/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(visualize_path)
 
-# Default to C99
-if(NOT CMAKE_C_STANDARD)
-  set(CMAKE_C_STANDARD 99)
-endif()
+# Generate symbols for IDE indexer
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
@@ -17,19 +15,39 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(custom_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+include_directories(${OpenCV_INCLUDE_DIRS})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
+
+link_directories(${OpenCV_LIBRARY_DIRS})
+
+set(SOURCES "")
+list(APPEND SOURCES "src/main.cpp")
+list(APPEND SOURCES "src/node.cpp")
+list(APPEND SOURCES "src/visualize_path.cpp")
+
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES})
+add_definitions(-O3)
+ament_target_dependencies(${PROJECT_NAME} rclcpp custom_msgs)
+
+install(
+  TARGETS ${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME}/
+)
+
+install(
+  DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY param
+  DESTINATION share/${PROJECT_NAME}
+)
 
 ament_package()
