--- a/visualize_path/package.xml
+++ b/visualize_path/package.xml
@@ -13,6 +13,7 @@
 
   <depend>rclcpp</depend>
   <depend>custom_msgs</depend>
+  <depend>filters</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
