--- a/wayfinding/CMakeLists.txt
+++ b/wayfinding/CMakeLists.txt
@@ -32,11 +32,11 @@ link_directories(${OpenCV_LIBRARY_DIRS})
 set(SOURCES "")
 list(APPEND SOURCES "src/main.cpp")
 list(APPEND SOURCES "src/node.cpp")
-
-add_library(${PROJECT_NAME}_lib "src/wayfinding_top_down.cpp" "src/wayfinding_line_detection.cpp" "include/${PROJECT_NAME}/wayfinding.hpp")
+list(APPEND SOURCES "src/wayfinding_top_down.cpp")
+list(APPEND SOURCES "src/wayfinding_line_detection.cpp")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${PROJECT_NAME}_lib filters::filters_lib)
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} filters::filters_lib)
 add_definitions(-O3)
 ament_target_dependencies(${PROJECT_NAME} rclcpp custom_msgs sensor_msgs zed_interfaces)
 
@@ -53,22 +53,6 @@ install(
 install(
   DIRECTORY param
   DESTINATION share/${PROJECT_NAME}
-)
-
-ament_export_targets(${PROJECT_NAME}_lib HAS_LIBRARY_TARGET)
-
-install(
-  DIRECTORY include/${PROJECT_NAME}
-  DESTINATION include
-)
-
-install(
-  TARGETS ${PROJECT_NAME}_lib
-  EXPORT ${PROJECT_NAME}_lib
-  LIBRARY DESTINATION lib
-  ARCHIVE DESTINATION lib
-  RUNTIME DESTINATION bin
-  INCLUDES DESTINATION include
 )
 
 ament_package()
