--- a/lidar_curb_detection/param/param.yaml
+++ b/lidar_curb_detection/param/param.yaml
@@ -9,20 +9,20 @@ lidar_curb_detection:
     # robot_specific:
     #   wheel_inside:                 # Width of the Wheels   
     #   wheel_width:                  # Distance of the vertical Plane in the center of the Robot to the vertical inside Plane of the Wheels
-    #   mounting_angle:   30          # The Mounting-Angle of the LiDAR
+    #   mounting_angle:               # The Mounting-Angle of the LiDAR
     # detection_thr:
-    #   angle_thr:                    # detection: Minimum angle between two Vectors that is needed to detect a Curbstone 
-    #   height_diff:                  # detection: Height_Difference that must exist, to detect a Curbstone
-    #   advanced_ray_check_thr:       # detection: Distance a possible Curbstone should be proofed, that it isn't a Pothole           
-    #   max_check_length:             # detection: Quantity of Rays that should be checked for a Curbstone    
+    #   angle_thr:                    # Minimum angle between two Vectors that is needed to detect a Curbstone 
+    #   height_diff:                  # Height_Difference that must exist, to detect a Curbstone
+    #   advanced_ray_check_thr:       # Distance a possible Curbstone should be proofed, that it isn't a Pothole           
+    #   max_check_length:             # Quantity of Rays that should be checked for a Curbstone    
     # bubble:
-    #   distance_thr:                 # bubble: Threshold that tells the filter, how far another Point is allowed to be away to be valid
-    #   quantity_check:               # bubble: Amount of Limits that is checked in each direction (before and behind)
-    #   quantity_thr:                 # bubble: Minimum amount of valid Points that needs to lay inside the distance_thr
+    #   distance_thr:                 # Threshold that tells the filter, how far another Point is allowed to be away to be valid
+    #   quantity_check:               # Amount of Limits that is checked in each direction (before and behind)
+    #   quantity_thr:                 # Minimum amount of valid Points that needs to lay inside the distance_thr
     # avg_dist:
-    #   quantity_check:               # avg_dist: Amount of Limits that is checked in each direction (before and behind)
-    #   counter_thr:                  # avg_dist: Minimum amount of taken distance-differences that is needed for the average-calculation, otherwise the limit is not valid
-    #   avg_dist_thr:                 # avg_dist: distance-averages below this Threshold are validating the Limit
+    #   avg_dist_thr:                 # distance-averages below this Threshold are validating the Limit
+    #   quantity_check:               # Amount of Limits that is checked in each direction (before and behind)
+    #   counter_thr:                  # Minimum amount of taken distance-differences that is needed for the average-calculation, otherwise the limit is not valid
     # island:
-    #   quantity_check:               # island: Amount of Limits that is checked in each direction (before and behind)
-    #   counter_thr:                  # island: Needed Quantity of Valid Limits to validate the looked up Limit
+    #   quantity_check:               # Amount of Limits that is checked in each direction (before and behind)
+    #   counter_thr:                  # Needed Quantity of Valid Limits to validate the looked up Limit
